<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainFragments.ProfilFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="Profil User"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/chatButton"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_customer_service"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linear_profil"
            app:layout_constraintBottom_toBottomOf="@+id/relativeLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

            <TextView
                android:id="@+id/txt_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:drawableStart="@drawable/ic_edt_profil"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto"
                android:text="Edit Profil"
                android:textColor="@color/putih"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_rounded_putih"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="15dp"
                android:padding="20dp"
                android:elevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:text="@string/username"
                        android:textColor="@color/text_33"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:drawableStart="@drawable/ic_user"
                        app:drawableTint="@color/text_33" />

                    <TextView
                        android:id="@+id/phone"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:text="Phone"
                        android:textColor="@color/text_33"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_phone"
                        app:drawableTint="@color/text_33"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:text="Email"
                        android:textColor="@color/text_33"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_email"
                        app:drawableTint="@color/text_33"
                        tools:ignore="HardcodedText"
                        android:maxLines="2"
                        android:autoSizeMinTextSize="8sp"
                        android:autoSizeMaxTextSize="14sp"
                        android:autoSizeTextType="uniform"/>

                    <TextView
                        android:id="@+id/reffCode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="10dp"
                        android:drawablePadding="10dp"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center_vertical"
                        android:text="Reffcode"
                        android:textColor="@color/text_33"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:drawableStartCompat="@drawable/ic_reff"
                        app:drawableTint="@color/text_33"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/bg_oval_menu"
                android:elevation="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    android:src="@drawable/logo_geraipay" />

            </RelativeLayout>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear_profil">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/mySaldo"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_file"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Mutasi Transaksi"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/myKomisi"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_file"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Komisi Saya"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/syarat"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_book"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/syarat"
                    android:textAlignment="textStart"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/privacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_globe"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/privacy_policy"
                    android:textAlignment="textStart"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/cust_services"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_cs"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Customer Services"
                    android:textAlignment="textStart"
                    android:textAllCaps="false" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black" />

                <Button
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="35dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_exit"
                    android:drawablePadding="20dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Logout"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    tools:ignore="HardcodedText" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="20dp"
                    android:alpha="0.5"
                    android:background="@android:color/black"
                    android:layout_marginBottom="100dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>